fix notifications' z-index

--- a/assets/js/blocks/notifications/__notification/notifications__notification.styl
+++ b/assets/js/blocks/notifications/__notification/notifications__notification.styl
@@ -1,7 +1,7 @@
 .notifications__notification
   position: relative
   overflow: hidden
-  z-index: 1000
+  z-index: 2000000000000
 
   margin: 0
   margin-left: 0.5rem
